NetBSD Problem Report #41856
From www@NetBSD.org Sun Aug 9 10:47:05 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id AF8FD63C277
for <gnats-bugs@gnats.netbsd.org>; Sun, 9 Aug 2009 10:47:05 +0000 (UTC)
Message-Id: <20090809104705.7E62163C270@www.NetBSD.org>
Date: Sun, 9 Aug 2009 10:47:05 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Misplaced #endif
X-Send-Pr-Version: www-1.0
>Number: 41856
>Category: port-sparc64
>Synopsis: Misplaced #endif
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-sparc64-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Aug 09 10:50:00 +0000 2009
>Closed-Date: Sun Aug 09 13:15:46 +0000 2009
>Last-Modified: Sun Aug 09 13:20:01 +0000 2009
>Originator: Henning Petersen
>Release: current-NetBSD
>Organization:
>Environment:
>Description:
>How-To-Repeat:
>Fix:
diff -u -r1.236 pmap.c
--- sys/arch/sparc64/sparc64/pmap.c 21 Apr 2009 21:30:00 -0000 1.236
+++ sys/arch/sparc64/sparc64/pmap.c 9 Aug 2009 05:28:07 -0000
@@ -2687,9 +2687,9 @@
if (res)
pv->pv_va |= PV_WE;
#endif
-#endif
mutex_exit(&pmap_lock);
}
+#endif
DPRINTF(PDB_CHANGEPROT|PDB_REF, ("pmap_is_modified(%p) = %d\n", pg,
res));
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 09 Aug 2009 13:15:46 +0000
State-Changed-Why:
Fixed, thanks!
From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/41856 CVS commit: src/sys/arch/sparc64/sparc64
Date: Sun, 9 Aug 2009 13:15:05 +0000
Module Name: src
Committed By: martin
Date: Sun Aug 9 13:15:05 UTC 2009
Modified Files:
src/sys/arch/sparc64/sparc64: pmap.c
Log Message:
Fix misplaced #endif, from Henning Petersen in PR port-sparc64/41856
To generate a diff of this commit:
cvs rdiff -u -r1.236 -r1.237 src/sys/arch/sparc64/sparc64/pmap.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.