Fix misplaced #endif, from Henning Petersen in PR port-sparc64/41856